force-app/main/default/objects/Date_Booking_To_Room__c/Date_Booking_To_Room__c.object-meta.xml
<CustomObject>
    <label>Date Booking To Room</label>
    <nameField>
        <displayFormat>DRBOOK-{000000000}</displayFormat>
        <label>Date Room Book</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Booking To Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>