force-app/main/default/objects/Date_Booking_To_Room__c/fields/capacity__c.field-meta.xml
<CustomField>
    <fullName>capacity__c</fullName>
    <formula>Cruise_Room__r.Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>