force-app/main/default/objects/Date_Booking_To_Room__c/fields/Cruise_Booking__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Booking__c</fullName>
    <label>Cruise Booking</label>
    <referenceTo>Cruise_Booking__c</referenceTo>
    <relationshipLabel>Date Booking To Rooms</relationshipLabel>
    <relationshipName>Date_Booking_To_Rooms</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>