force-app/main/default/objects/Date_Booking_To_Room__c/fields/Cruise_Room__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Room__c</fullName>
    <label>Cruise Room</label>
    <referenceTo>Cruise_Room__c</referenceTo>
    <relationshipLabel>Date Booking To Rooms</relationshipLabel>
    <relationshipName>Date_Booking_To_Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>