force-app/main/default/objects/Date_Booking_To_Room__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <formula>Cruise_Room__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>